--- a/demo/addons/gdvk/plugin.cfg
+++ b/demo/addons/gdvk/plugin.cfg
@@ -1,7 +1,9 @@
 [plugin]
 
 name="GDVK"
-description="Godot virtual keyboard plugin"
+description="Godot virtual keyboard plugin
+
+see https://github.com/CrispyPin/gdvk"
 author="CrispyPin"
-version=""
+version="0.1.0"
 script="gdvk_plugin.gd"
